# rap_sitkCore

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.rst  api.html  conftest.py  development.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-pylibjpeg.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml
_sources/: api.rst.txt  development.rst.txt
docs/: api.rst  conf.py  development.rst  index.rst
my_pkg/: __init__.py  _util.py  answer.py
rap_sitkcore/: __init__.py  _dicom_util.py  _dicom_utils.py  _util.py  answer.py  is_dicom_xray.py  read_dcm.py  read_dcm_headers.py  resize.py
test/: __init__.py
test/data/: 1.2.392.200036.9116.2.5.1.37.2429823676.1495586039.603772.DCM  1.2.840.113704.9.1000.16.2.201903221237504530000100020001.I10  1.2.840.114062.2.192.168.196.13.2015.11.4.13.11.45.13871156.dcm  1.3.6.1.4.1.25403.158515237678667.5060.20130807021253.18.dcm  1.3.6.1.4.1.25403.163683357445804.11044.20131119114627.12.dcm  2.25.226263219114459199164755074787420926696.dcm  2.25.240995260530147929836761273823046959883.dcm  2.25.288816364564751018524666516362407260298.dcm  2.25.298570032897489859462791131067889681111.dcm  2.25.326714092011492114153708980185182745084.dcm  2.25.40537326380965754670062689705190363681.dcm  2.25.5871713374023139953558641168991505875.dcm  n10.dcm  n11.dcm  n12.dcm  non_square_color.dcm  non_square_uint16.dcm  square_uint8.dcm  test.dcm
test/unit/: test_answer.py  test_dicom_util.py  test_helper.py  (+5 more)
