[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rap_sitkcore"
authors = [
  { name="Bradley Lowekamp", email="bioinformatics@niaid.nih.gov" },
]
description = "Common image utilities for Radiomics Analysis Portal base on SimpleITK"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License 2.0",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.urls]
homepage = "https://www.niaid.nih.gov/research/bioinformatics-computational-biosciences-branch"
source = "https://github.com/niaid/rap_sitkCore"
documentation = "https://sturdy-winner-164e7c64.pages.github.io"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
  "pytest",
]
pylibjpeg = [
# optional/extra packages for pydicom support for additional encodings
"pylibjpeg",
"pylibjpeg-rle",

# earlier versions did not correctly represent the version dependency on numpy
"pylibjpeg-libjpeg>=1.3.1",
"pylibjpeg-openjpeg>=1.2.1"
]

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.black]
line-length =  120
exclude = '(docs/conf\.py)|venv*'

[tool.flake8]
max-line-length = 120
extend-exclude = "docs/conf.py,venv*"
